examples/locality-load-balancing/envoy-proxy.yaml
node:
  cluster: test-cluster
  id: test-id
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  listeners:
  - name: backend
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 3000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: backend
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: backend
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    health_checks:
    - interval: 2s
      timeout: 3s
      no_traffic_interval: 4s
      no_traffic_healthy_interval: 4s
      unhealthy_threshold: 1
      healthy_threshold: 1
      http_health_check:
        path: "/"
    load_assignment:
      cluster_name: backend
      endpoints:
      - locality:
          region: local
          zone: zone-1
        load_balancing_weight: 2
        priority: 0  # highest
        lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: backend-local-1
                port_value: 8080
            health_check_config:
              port_value: 8080
            hostname: backend-local-1
      - locality:
          region: local
          zone: zone-2
        load_balancing_weight: 1
        priority: 0
        lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: backend-local-2
                port_value: 8080
            health_check_config:
              port_value: 8080
            hostname: backend-local-2
